--- a/Tables exercises/exercise.css
+++ b/Tables exercises/exercise.css
@@ -24,6 +24,7 @@ table{
     border-radius: 5px;
     right, gray, white);
     margin:10%;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 td{
@@ -117,7 +118,7 @@ tbody tr td:nth-child(8){
 tbody tr td:nth-child(8):hover .extension{
     display: block;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    transform: scale(1);
+    /* transform: scale(1.2); */
 }
 
 
